<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".shrub">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="298dp"
            android:layout_marginTop="636dp"
            android:text="Metres (m)"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="298dp"
            android:layout_marginTop="776dp"
            android:text="Metres (m)"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="298dp"
            android:layout_marginTop="844dp"
            android:text="(If Known)"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="298dp"
            android:layout_marginTop="704dp"
            android:text="Metres (m)"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tree_data_4"
            android:layout_width="133dp"
            android:layout_height="45dp"
            android:layout_marginStart="152dp"
            android:layout_marginTop="832dp"
            android:ems="10"
            android:inputType="textShortMessage"
            android:text="@string/tree_data_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="776dp"
            android:text="Crown Radius:"
            app:layout_constraintEnd_toStartOf="@+id/tree_data_3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="636dp"
            android:text="Max Tree Height:"
            app:layout_constraintEnd_toStartOf="@+id/tree_data_1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="704dp"
            android:text="Canopy Height:"
            app:layout_constraintEnd_toStartOf="@+id/tree_data_2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="844dp"
            android:text="Species Type"
            app:layout_constraintEnd_toStartOf="@+id/tree_data_4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tree_data_1"
            android:layout_width="135dp"
            android:layout_height="41dp"
            android:layout_marginBottom="26dp"
            android:ems="10"
            android:text="@string/tree_data_1"
            app:layout_constraintBottom_toTopOf="@+id/tree_data_2"
            app:layout_constraintStart_toStartOf="@+id/tree_data_2" />

        <EditText
            android:id="@+id/tree_data_2"
            android:layout_width="137dp"
            android:layout_height="45dp"
            android:layout_marginTop="696dp"
            android:layout_marginBottom="26dp"
            android:ems="10"
            android:text="@string/tree_data_2"
            app:layout_constraintBottom_toTopOf="@+id/tree_data_3"
            app:layout_constraintStart_toStartOf="@+id/tree_data_3"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tree_data_3"
            android:layout_width="137dp"
            android:layout_height="42dp"
            android:layout_marginTop="756dp"
            android:layout_marginBottom="26dp"
            android:ems="10"
            android:text="@string/tree_data_3"
            app:layout_constraintBottom_toTopOf="@+id/tree_data_4"
            app:layout_constraintStart_toStartOf="@+id/tree_data_4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="235dp"
            android:layout_height="301dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="1dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:text="@string/shrub_info"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="201dp"
            android:layout_marginTop="308dp"
            android:layout_marginEnd="24dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:text="@string/shrub_info_2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1018dp"
            android:layout_marginBottom="8dp"
            android:onClick="finished2"
            android:text="@string/shrub_enter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="205dp"
            android:layout_height="298dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gazelle_transect_technique" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="222dp"
            android:layout_height="202dp"
            android:layout_marginStart="173dp"
            android:layout_marginTop="306dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gazelle_woody_measurement" />

        <!--<Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="264dp"
            android:layout_marginTop="984dp"
            android:layout_marginBottom="56dp"
            android:onClick="nexthab"
            android:text="@string/tree_next_habitat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginBottom="68dp"
            android:onClick="nextzone"
            android:text="@string/tree_next_zone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" /> -->

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="946dp"
            android:layout_marginBottom="80dp"
            android:onClick="nexttree"
            android:text="@string/tree_next_tree"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="536dp"
            android:text="Enter in information about each tree along the line. Select next to input info about each tree."
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tree_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="920dp"
            android:layout_marginBottom="122dp"
            android:text="@string/tree_num"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/shrub_point_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="593dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- <TextView
             android:id="@+id/tree_zone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="148dp"
             android:layout_marginTop="912dp"
             android:text="@string/tree_zone"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />

         <TextView
             android:id="@+id/tree_hab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="264dp"
             android:layout_marginTop="912dp"
             android:text="@string/tree_hab"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" /> -->


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>